--- a/Trinity.Mvc/Views/Members/Chats.cshtml
+++ b/Trinity.Mvc/Views/Members/Chats.cshtml
@@ -9,139 +9,14 @@
 
 <main role="main">
     <div class="container">
-        <div class="row gx-0">
-            <!-- Sidebar START -->
-            @await Component.InvokeAsync("ChatSidebar")
-            <!-- Sidebar END -->
-
-            <!-- Chat conversation START -->
-            <div class="col-lg-8 col-xxl-9">
-                <div class="card card-chat rounded-start-lg-0 border-start-lg-0">
-                    <div class="card-body h-100">
-                        <div class="tab-content py-0 mb-0 h-100" id="chatTabsContent">
-                            <!-- Conversation item START -->
-                            <div class="fade tab-pane show active h-100" id="chat-1" role="tabpanel" aria-labelledby="chat-1-tab">
-                                <!-- Top avatar and status START -->
-                                <div class="d-sm-flex justify-content-between align-items-center">
-                                    <div class="d-flex mb-2 mb-sm-0">
-                                        <div class="flex-shrink-0 avatar me-2">
-                                            <img class="avatar-img rounded-circle" src="~/media/members/@(User.FindFirst("ProfileImage")!.Value)" alt="">
-                                        </div>
-                                        <div class="d-block flex-grow-1">
-                                            <h6 class="mb-0 mt-1">@(User.FindFirst("FullName")!.Value)</h6>
-                                            <div class="small text-secondary"><i class="fa-solid fa-circle text-success me-1"></i>Online</div>
-                                        </div>
-                                    </div>
-                                    <div class="d-flex align-items-center">
-                                        <!-- Call button -->
-                                        <a href="#!" class="icon-md rounded-circle btn btn-primary-soft me-2 px-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Audio call"><i class="bi bi-telephone-fill"></i></a>
-                                        <a href="#!" class="icon-md rounded-circle btn btn-primary-soft me-2 px-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Video call"><i class="bi bi-camera-video-fill"></i></a>
-                                        <!-- Card action START -->
-                                        <div class="dropdown">
-                                            <a class="icon-md rounded-circle btn btn-primary-soft me-2 px-2" href="#" id="chatcoversationDropdown" role="button" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><i class="bi bi-three-dots-vertical"></i></a>               
-                                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="chatcoversationDropdown">
-                                                <li><a class="dropdown-item" href="#"><i class="bi bi-check-lg me-2 fw-icon"></i>Mark as read</a></li>
-                                                <li><a class="dropdown-item" href="#"><i class="bi bi-mic-mute me-2 fw-icon"></i>Mute conversation</a></li>
-                                                <li><a class="dropdown-item" href="#"><i class="bi bi-person-check me-2 fw-icon"></i>View profile</a></li>
-                                                <li><a class="dropdown-item" href="#"><i class="bi bi-trash me-2 fw-icon"></i>Delete chat</a></li>
-                                                <li class="dropdown-divider"></li>
-                                                <li><a class="dropdown-item" href="#"><i class="bi bi-archive me-2 fw-icon"></i>Archive chat</a></li>
-                                            </ul>
-                                        </div>
-                                        <!-- Card action END -->
-                                    </div>
-                                </div>
-                                <!-- Top avatar and status END -->
-                                <hr>
-                                <!-- Chat conversation START -->
-                                <div class="chat-conversation-content custom-scrollbar">
-                                    <!-- Chat time -->
-                                    <div class="text-center small my-2">Jul 16, 2022, 06:15 am</div>
-                                    <!-- Chat message left -->
-                                    <div class="d-flex mb-1">
-                                        <div class="flex-shrink-0 avatar avatar-xs me-2">
-                                        <img class="avatar-img rounded-circle" src="assets/images/avatar/10.jpg" alt="">
-                                        </div>
-                                        <div class="flex-grow-1">
-                                        <div class="w-100">
-                                            <div class="d-flex flex-column align-items-start">
-                                            <div class="bg-light text-secondary p-2 px-3 rounded-2">Applauded no discovery in newspaper allowance am northward😊</div>
-                                            <div class="small my-2">6:15 AM</div>
-                                            </div>
-                                        </div>
-                                        </div>
-                                    </div>
-                                    <!-- Chat message right -->
-                                    <div class="d-flex justify-content-end text-end mb-1">
-                                        <div class="w-100">
-                                        <div class="d-flex flex-column align-items-end">
-                                            <div class="bg-primary text-white p-2 px-3 rounded-2">With pleasure</div>
-                                        </div>
-                                        </div>
-                                    </div>
-                                    <!-- Chat message right -->
-                                    <div class="d-flex justify-content-end text-end mb-1">
-                                        <div class="w-100">
-                                        <div class="d-flex flex-column align-items-end">
-                                            <div class="bg-primary text-white p-2 px-3 rounded-2">No visited raising gravity outward subject my cottage Mr be.</div>
-                                            <div class="d-flex my-2">
-                                            <div class="small text-secondary">6:20 AM</div>
-                                            <div class="small ms-2"><i class="fa-solid fa-check-double text-info"></i></div>
-                                            </div>
-                                        </div>
-                                        </div>
-                                    </div>
-                                    <!-- Chat time -->
-                                    <div class="text-center small my-2">2 New Messages</div>
-                                    <!-- Chat message left -->
-                                    <div class="d-flex mb-2">
-                                        <div class="flex-shrink-0 avatar avatar-xs me-2">
-                                        <img class="avatar-img rounded-circle" src="assets/images/avatar/10.jpg" alt="">
-                                        </div>
-                                        <div class="flex-grow-1">
-                                        <div class="w-100">
-                                            <div class="d-flex flex-column align-items-start">
-                                            <div class="bg-light text-secondary p-2 px-3 rounded-2">Traveling alteration impression 🤐 six all uncommonly Chamber hearing inhabit joy highest private.</div>
-                                            </div>
-                                        </div>
-                                        </div>
-                                    </div>
-                                    <!-- Chat message left -->
-                                    <div class="d-flex mb-1">
-                                        <div class="flex-shrink-0 avatar avatar-xs me-2">
-                                        <img class="avatar-img rounded-circle" src="assets/images/avatar/10.jpg" alt="">
-                                        </div>
-                                        <div class="flex-grow-1">
-                                        <div class="w-100">
-                                            <div class="d-flex flex-column align-items-start">
-                                            <div class="bg-light text-secondary p-3 rounded-2">
-                                                <div class="typing d-flex align-items-center">
-                                                <div class="dot"></div>
-                                                <div class="dot"></div>
-                                                <div class="dot"></div>
-                                                </div>
-                                            </div>
-                                            </div>
-                                        </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!-- Chat conversation END -->
-                            </div>
-                            <!-- Conversation item END -->
-                        </div>
-                    </div>
-                    <div class="card-footer">
-                        <div class="d-sm-flex align-items-end">
-                        <textarea class="form-control mb-sm-0 mb-3" data-autoresize placeholder="Type a message" rows="1"></textarea>
-                        <button class="btn btn-sm btn-danger-soft ms-sm-2"><i class="fa-solid fa-face-smile fs-6"></i></button>
-                        <button class="btn btn-sm btn-secondary-soft ms-2"><i class="fa-solid fa-paperclip fs-6"></i></button>
-                        <button class="btn btn-sm btn-primary ms-2"><i class="fa-solid fa-paper-plane fs-6"></i></button>
-                        </div>
-                    </div>
-                </div>
+        <div class="row g-4">
+            <div class="col-lg-3">
+                <partial name="Members/_MemberNav" />
             </div>
-            <!-- Chat conversation END -->
+
+            <div class="col-lg-9 vstack gap-4">
+                @await Component.InvokeAsync("UserChats")
+            </div>
         </div>
     </div>
 </main>
