--- a/Trinity.Mvc/Views/Shared/Components/UserChats/Default.cshtml
+++ b/Trinity.Mvc/Views/Shared/Components/UserChats/Default.cshtml
@@ -1,32 +1,107 @@
 @model IEnumerable<PrivateChatViewModel>
 
-<div class="card">
+<div class="card h-100">
     <div class="card-header d-sm-flex align-items-center text-center justify-content-sm-between border-0 pb-0">
         <h1 class="h4 card-title">Conversations</h1>
         <!-- Button modal -->
-        <a class="btn btn-complementary-soft" href="#">
-            <i class="fa-solid fa-compass pe-1"></i>
+        <a class="btn btn-complementary-soft" href="#" data-bs-toggle="modal" data-bs-target="#saveProjectModal">
+            <i class="fa-solid fa-plus pe-1"></i> Create group
         </a>
     </div>
     <div class="card-body">
         <div class="row">
-            @foreach (var item in Model)
-            {
-                <div class="col-3">
-                    <!-- Chat user tab item -->
-                    <a asp-controller="Messenging" asp-action="Chat" asp-route-id="@item.Id" class="text-start">
-                        <div class="d-flex">
-                            <div class="flex-shrink-0 avatar avatar-story me-2 status-online">
-                                <img class="avatar-img rounded-circle" src="~/media/members/@(item.ProfileImage)" alt="">
-                            </div>
-                            <div class="flex-grow-1 d-block">
-                                <h6 class="mb-0 mt-1">@item.FullName</h6>
-                                <div class="small text-secondary">@item.Name</div>
-                            </div>
-                        </div>
-                    </a>
-                </div>                         
-            }
+            <div class="col-lg-12">
+                <div class="">
+                    <div class="table-responsive">
+                        <table class="table project-list-table table-nowrap align-middle table-borderless">
+                            <thead>
+                                <tr>
+                                    <th scope="col" class="ps-4" style="width: 50px;">
+                                        <div class="form-check font-size-16"><input type="checkbox" class="form-check-input" id="contacusercheck" /><label class="form-check-label" for="contacusercheck"></label></div>
+                                    </th>
+                                    <th scope="col">User</th>
+                                    <th scope="col">Messages</th>
+                                    <th scope="col">Unread</th>
+                                    <th scope="col">Type</th>
+                                    <th scope="col" style="width: 200px;">Action</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var item in Model)
+                                {
+                                    <tr>
+                                    <th scope="row" class="ps-4">
+                                        <div class="form-check font-size-16"><input type="checkbox" class="form-check-input" id="contacusercheck1" /><label class="form-check-label" for="contacusercheck1"></label></div>
+                                    </th>
+                                    <td>
+                                        <img src="~/media/members/@item.ProfileImage" alt="" class="avatar-sm rounded-circle me-2" />
+                                        <a href="#" class="text-body">@item.FullName</a>
+                                    </td>
+                                    <td>0</td>
+                                    <td>0</td>
+                                    <td>Private</td>
+                                    <td>
+                                        <div class="dropdown">
+                                            <!-- Card share action menu -->
+                                            <button class="icon-sm btn btn-primary-soft btn-block w-100" type="button" id="profileAction2" data-bs-toggle="dropdown"
+                                                aria-expanded="false">
+                                                <i class="bi bi-three-dots"></i>
+                                            </button>
+                                            <!-- Card share action dropdown menu -->
+                                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileAction2">
+                                                <li>
+                                                    <a class="dropdown-item" asp-controller="Positions" asp-action="Details" asp-route-id="@item.Id">
+                                                        <i class="bi bi-info-circle-fill fa-fw pe-2"></i>
+                                                        Details
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a class="dropdown-item" href="#">
+                                                        <i class="bi bi-pencil-square fa-fw pe-2"></i>
+                                                        Edit
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <hr class="dropdown-divider">
+                                                </li>
+                                                <li>
+                                                    <a class="dropdown-item" href="#">
+                                                        <i class="bi bi-trash fa-fw pe-2"></i>
+                                                        Delete
+                                                    </a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </td>
+                                </tr>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row g-0 align-items-center pb-4">
+            <div class="col-sm-6">
+                <div><p class="mb-sm-0">Showing 1 to 10 of 57 entries</p></div>
+            </div>
+            <div class="col-sm-6">
+                <div class="float-sm-end">
+                    <ul class="pagination mb-sm-0">
+                        <li class="page-item disabled">
+                            <a href="#" class="page-link"><i class="bi bi-chevron-left"></i></a>
+                        </li>
+                        <li class="page-item active"><a href="#" class="page-link">1</a></li>
+                        <li class="page-item"><a href="#" class="page-link">2</a></li>
+                        <li class="page-item"><a href="#" class="page-link">3</a></li>
+                        <li class="page-item"><a href="#" class="page-link">4</a></li>
+                        <li class="page-item"><a href="#" class="page-link">5</a></li>
+                        <li class="page-item">
+                            <a href="#" class="page-link"><i class="bi bi-chevron-right"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
 </div>
